2013-09-13  Roland Levillain  <roland@lrde.epita.fr>

	Scribo: Define flags in proper Makefile helpers.

	* common.mk (AM_CPPFLAGS): Remove -I$(top_builddir)/scribo and
	I$(top_builddir)/milena.
	Include this file...
	* doc/Makefile.am: ...here.
	(AM_CPPFLAGS): Remove.
	* tests/tests.mk (AM_CPPFLAGS): Add -I$(top_builddir)/scribo.

2013-09-12  Roland Levillain  <roland@lrde.epita.fr>

	Scribo: Remove `return 0;' statements at end of main().

	* src/text_in_picture.cc,
	* src/text_recognition_in_picture.cc,
	* tests/convert/base64.cc,
	* tests/estim/font_boldness.cc,
	* tests/estim/font_color.cc,
	* tests/toolchain/nepomuk/text_extraction.cc,
	* tests/util/component_precise_outline.cc:
	Here.

2013-09-05  Roland Levillain  <roland@lrde.epita.fr>

	Exercise the multi-scale Sauvola binarization with a TIFF image.

	* tests/img/lena.tiff: New.
	Generated from Milena's lena.pgm using ImageMagick's convert.
	* tests/Makefile.am (EXTRA_DIST): Add img/lena.tiff.
	* tests/binarization/sauvola_ms_tiff.cc: New test.
	* tests/binarization/sauvola_ms_tiff.ref.pbm: New reference output
	image.
	* tests/binarization/Makefile.am (check_PROGRAMS) [HAVE_TIFF]:
	Add sauvola_ms_tiff.
	(sauvola_ms_tiff_CPPFLAGS, sauvola_ms_tiff_LDFLAGS) [HAVE_TIFF]:
	New.
	(EXTRA_DIST): Add sauvola_ms_tiff.ref.pbm.

2013-09-11  Roland Levillain  <roland@lrde.epita.fr>

	Scribo: Fix the use of QT_LIBS.

	* src/toolchain/nepomuk/Makefile.am
	(text_extraction_LDFLAGS): Move $(QT_LIBS)...
	(text_extraction_LDADD): ...here.
	Add $(LDADD).

2013-09-11  Roland Levillain  <roland@lrde.epita.fr>

	Regen Scribo's unit-tests.mk.

	* tests/unit_test/unit-tests.mk: Regen.

2013-09-10  Roland Levillain  <roland@lrde.epita.fr>

	Scribo: Remove lines `VARIABLE = @VARIABLE@' from Makefile.am's.

	* scribo.mk,
	* tests/tests.mk:
	Here, as Automake 1.11+ already takes care of this.

2013-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Scribo: Do not look for headers in the build tree uselessly.
