@@ -155,7 +155,8 @@ endif HAVE_MAGICKXX
 # Generated by configure from scribo-cli.in.
 dist_bin_SCRIPTS = scribo-cli
 
-do_subst = sed -e 's|@utilexecdir[@]|$(utilexecdir)|g'
+do_subst = sed -e 's|@utilexecdir[@]|$(utilexecdir)|g'		\
+               -e 's|@PACKAGE_VERSION[@]|$(PACKAGE_VERSION)|g'
 
 scribo-cli: $(srcdir)/scribo-cli.in Makefile
 	rm -f $@ $@.tmp
